--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
       <div class="hero">
         <div>
           <h1>Bikes for Refugees</h1>
-        <p>
-          Providing donated bikes and accessories to refugees and asylum
-          seekers in Scotland.
-        </p>
-        <button>Donate a bike today</button>
-        <button>Volunteer</button>
+          <p>
+            Providing donated bikes and accessories to refugees and asylum
+            seekers in Scotland.
+          </p>
+          <button class="btn-1">Donate a bike today</button>
+          <button class="btn-2">Volunteer</button>
         </div>
       </div>
 
